@@ -19,7 +19,6 @@ import java.util.Map;
  * <p><strong>IMPLEMENTATION NOTE</strong> - Instances of this class can be
  * successfully serialized and deserialized <strong>ONLY</strong> if all
  * property values are <code>Serializable</code>.</p>
- *
  * @version $Id$
  */
 
@@ -30,9 +29,25 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
 
     /**
+     * The <code>DynaClass</code> "base class" that this DynaBean
+     * is associated with.
+     */
+    protected DynaClass dynaClass = null;
+
+
+    // ---------------------------------------------------- Instance Variables
+    /**
+     * The set of property values for this DynaBean, keyed by property name.
+     */
+    protected HashMap<String, Object> values = new HashMap<String, Object>();
+    /**
+     * Map decorator for this DynaBean
+     */
+    private transient Map<String, Object> mapDecorator;
+
+    /**
      * Construct a new <code>DynaBean</code> associated with the specified
      * <code>DynaClass</code> instance.
-     *
      * @param dynaClass The DynaClass we are associated with
      */
     public BasicDynaBean(final DynaClass dynaClass) {
@@ -42,32 +57,12 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     }
 
-
-    // ---------------------------------------------------- Instance Variables
-
-
-    /**
-     * The <code>DynaClass</code> "base class" that this DynaBean
-     * is associated with.
-     */
-    protected DynaClass dynaClass = null;
-
-
-    /**
-     * The set of property values for this DynaBean, keyed by property name.
-     */
-    protected HashMap<String, Object> values = new HashMap<String, Object>();
-
-    /** Map decorator for this DynaBean */
-    private transient Map<String, Object> mapDecorator;
-
     /**
      * Return a Map representation of this DynaBean.
      * </p>
      * This, for example, could be used in JSTL in the following way to access
      * a DynaBean's <code>fooProperty</code>:
      * <ul><li><code>${myDynaBean.<b>map</b>.fooProperty}</code></li></ul>
-     *
      * @return a Map representation of this DynaBean
      * @since 1.8.0
      */
@@ -87,26 +82,24 @@ public class BasicDynaBean implements DynaBean, Serializable {
     /**
      * Does the specified mapped property contain a value for the specified
      * key value?
-     *
      * @param name Name of the property to check
-     * @param key Name of the key to check
+     * @param key  Name of the key to check
      * @return <code>true</code> if the mapped property contains a value for
      * the specified key, otherwise <code>false</code>
-     *
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
+     *                                  of the specified name
      */
     public boolean contains(final String name, final String key) {
 
         final Object value = values.get(name);
         if (value == null) {
             throw new NullPointerException
-                    ("No mapped value for '" + name + "(" + key + ")'");
+                ("No mapped value for '" + name + "(" + key + ")'");
         } else if (value instanceof Map) {
             return (((Map<?, ?>) value).containsKey(key));
         } else {
             throw new IllegalArgumentException
-                    ("Non-mapped property for '" + name + "(" + key + ")'");
+                ("Non-mapped property for '" + name + "(" + key + ")'");
         }
 
     }
@@ -114,12 +107,10 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Return the value of a simple property with the specified name.
-     *
      * @param name Name of the property whose value is to be retrieved
      * @return The property's value
-     *
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
+     *                                  of the specified name
      */
     public Object get(final String name) {
 
@@ -139,7 +130,7 @@ public class BasicDynaBean implements DynaBean, Serializable {
         if (type == Boolean.TYPE) {
             return (Boolean.FALSE);
         } else if (type == Byte.TYPE) {
-            return (new Byte((byte) 0));
+            return (Byte.valueOf((byte) 0));
         } else if (type == Character.TYPE) {
             return (new Character((char) 0));
         } else if (type == Double.TYPE) {
@@ -147,11 +138,11 @@ public class BasicDynaBean implements DynaBean, Serializable {
         } else if (type == Float.TYPE) {
             return (new Float((float) 0.0));
         } else if (type == Integer.TYPE) {
-            return (new Integer(0));
+            return (Integer.valueOf(0));
         } else if (type == Long.TYPE) {
-            return (new Long(0));
+            return (Long.valueOf(0));
         } else if (type == Short.TYPE) {
-            return (new Short((short) 0));
+            return (Short.valueOf((short) 0));
         } else {
             return (null);
         }
@@ -160,33 +151,31 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Return the value of an indexed property with the specified name.
-     *
-     * @param name Name of the property whose value is to be retrieved
+     * @param name  Name of the property whose value is to be retrieved
      * @param index Index of the value to be retrieved
      * @return The indexed property's value
-     *
-     * @throws IllegalArgumentException if there is no property
-     *  of the specified name
-     * @throws IllegalArgumentException if the specified property
-     *  exists, but is not indexed
+     * @throws IllegalArgumentException  if there is no property
+     *                                   of the specified name
+     * @throws IllegalArgumentException  if the specified property
+     *                                   exists, but is not indexed
      * @throws IndexOutOfBoundsException if the specified index
-     *  is outside the range of the underlying property
-     * @throws NullPointerException if no array or List has been
-     *  initialized for this property
+     *                                   is outside the range of the underlying property
+     * @throws NullPointerException      if no array or List has been
+     *                                   initialized for this property
      */
     public Object get(final String name, final int index) {
 
         final Object value = values.get(name);
         if (value == null) {
             throw new NullPointerException
-                    ("No indexed value for '" + name + "[" + index + "]'");
+                ("No indexed value for '" + name + "[" + index + "]'");
         } else if (value.getClass().isArray()) {
             return (Array.get(value, index));
         } else if (value instanceof List) {
             return ((List<?>) value).get(index);
         } else {
             throw new IllegalArgumentException
-                    ("Non-indexed property for '" + name + "[" + index + "]'");
+                ("Non-indexed property for '" + name + "[" + index + "]'");
         }
 
     }
@@ -195,27 +184,25 @@ public class BasicDynaBean implements DynaBean, Serializable {
     /**
      * Return the value of a mapped property with the specified name,
      * or <code>null</code> if there is no value for the specified key.
-     *
      * @param name Name of the property whose value is to be retrieved
-     * @param key Key of the value to be retrieved
+     * @param key  Key of the value to be retrieved
      * @return The mapped property's value
-     *
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
+     *                                  of the specified name
      * @throws IllegalArgumentException if the specified property
-     *  exists, but is not mapped
+     *                                  exists, but is not mapped
      */
     public Object get(final String name, final String key) {
 
         final Object value = values.get(name);
         if (value == null) {
             throw new NullPointerException
-                    ("No mapped value for '" + name + "(" + key + ")'");
+                ("No mapped value for '" + name + "(" + key + ")'");
         } else if (value instanceof Map) {
             return (((Map<?, ?>) value).get(key));
         } else {
             throw new IllegalArgumentException
-                    ("Non-mapped property for '" + name + "(" + key + ")'");
+                ("Non-mapped property for '" + name + "(" + key + ")'");
         }
 
     }
@@ -224,7 +211,6 @@ public class BasicDynaBean implements DynaBean, Serializable {
     /**
      * Return the <code>DynaClass</code> instance that describes the set of
      * properties available for this DynaBean.
-     *
      * @return The associated DynaClass
      */
     public DynaClass getDynaClass() {
@@ -237,25 +223,23 @@ public class BasicDynaBean implements DynaBean, Serializable {
     /**
      * Remove any existing value for the specified key on the
      * specified mapped property.
-     *
      * @param name Name of the property for which a value is to
-     *  be removed
-     * @param key Key of the value to be removed
-     *
+     *             be removed
+     * @param key  Key of the value to be removed
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
+     *                                  of the specified name
      */
     public void remove(final String name, final String key) {
 
         final Object value = values.get(name);
         if (value == null) {
             throw new NullPointerException
-                    ("No mapped value for '" + name + "(" + key + ")'");
+                ("No mapped value for '" + name + "(" + key + ")'");
         } else if (value instanceof Map) {
             ((Map<?, ?>) value).remove(key);
         } else {
             throw new IllegalArgumentException
-                    ("Non-mapped property for '" + name + "(" + key + ")'");
+                ("Non-mapped property for '" + name + "(" + key + ")'");
         }
 
     }
@@ -263,16 +247,14 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Set the value of a simple property with the specified name.
-     *
-     * @param name Name of the property whose value is to be set
+     * @param name  Name of the property whose value is to be set
      * @param value Value to which this property is to be set
-     *
-     * @throws ConversionException if the specified value cannot be
-     *  converted to the type required for this property
+     * @throws ConversionException      if the specified value cannot be
+     *                                  converted to the type required for this property
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
-     * @throws NullPointerException if an attempt is made to set a
-     *  primitive property to null
+     *                                  of the specified name
+     * @throws NullPointerException     if an attempt is made to set a
+     *                                  primitive property to null
      */
     public void set(final String name, final Object value) {
 
@@ -280,11 +262,11 @@ public class BasicDynaBean implements DynaBean, Serializable {
         if (value == null) {
             if (descriptor.getType().isPrimitive()) {
                 throw new NullPointerException
-                        ("Primitive value for '" + name + "'");
+                    ("Primitive value for '" + name + "'");
             }
         } else if (!isAssignable(descriptor.getType(), value.getClass())) {
             throw new ConversionException
-                    ("Cannot assign value of type '" +
+                ("Cannot assign value of type '" +
                     value.getClass().getName() +
                     "' to property '" + name + "' of type '" +
                     descriptor.getType().getName() + "'");
@@ -296,26 +278,24 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Set the value of an indexed property with the specified name.
-     *
-     * @param name Name of the property whose value is to be set
+     * @param name  Name of the property whose value is to be set
      * @param index Index of the property to be set
      * @param value Value to which this property is to be set
-     *
-     * @throws ConversionException if the specified value cannot be
-     *  converted to the type required for this property
-     * @throws IllegalArgumentException if there is no property
-     *  of the specified name
-     * @throws IllegalArgumentException if the specified property
-     *  exists, but is not indexed
+     * @throws ConversionException       if the specified value cannot be
+     *                                   converted to the type required for this property
+     * @throws IllegalArgumentException  if there is no property
+     *                                   of the specified name
+     * @throws IllegalArgumentException  if the specified property
+     *                                   exists, but is not indexed
      * @throws IndexOutOfBoundsException if the specified index
-     *  is outside the range of the underlying property
+     *                                   is outside the range of the underlying property
      */
     public void set(final String name, final int index, final Object value) {
 
         final Object prop = values.get(name);
         if (prop == null) {
             throw new NullPointerException
-                    ("No indexed value for '" + name + "[" + index + "]'");
+                ("No indexed value for '" + name + "[" + index + "]'");
         } else if (prop.getClass().isArray()) {
             Array.set(prop, index, value);
         } else if (prop instanceof List) {
@@ -331,7 +311,7 @@ public class BasicDynaBean implements DynaBean, Serializable {
             }
         } else {
             throw new IllegalArgumentException
-                    ("Non-indexed property for '" + name + "[" + index + "]'");
+                ("Non-indexed property for '" + name + "[" + index + "]'");
         }
 
     }
@@ -339,24 +319,22 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Set the value of a mapped property with the specified name.
-     *
-     * @param name Name of the property whose value is to be set
-     * @param key Key of the property to be set
+     * @param name  Name of the property whose value is to be set
+     * @param key   Key of the property to be set
      * @param value Value to which this property is to be set
-     *
-     * @throws ConversionException if the specified value cannot be
-     *  converted to the type required for this property
+     * @throws ConversionException      if the specified value cannot be
+     *                                  converted to the type required for this property
      * @throws IllegalArgumentException if there is no property
-     *  of the specified name
+     *                                  of the specified name
      * @throws IllegalArgumentException if the specified property
-     *  exists, but is not mapped
+     *                                  exists, but is not mapped
      */
     public void set(final String name, final String key, final Object value) {
 
         final Object prop = values.get(name);
         if (prop == null) {
             throw new NullPointerException
-                    ("No mapped value for '" + name + "(" + key + ")'");
+                ("No mapped value for '" + name + "(" + key + ")'");
         } else if (prop instanceof Map) {
             @SuppressWarnings("unchecked")
             final
@@ -366,7 +344,7 @@ public class BasicDynaBean implements DynaBean, Serializable {
             map.put(key, value);
         } else {
             throw new IllegalArgumentException
-                    ("Non-mapped property for '" + name + "(" + key + ")'");
+                ("Non-mapped property for '" + name + "(" + key + ")'");
         }
 
     }
@@ -377,19 +355,17 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Return the property descriptor for the specified property name.
-     *
      * @param name Name of the property for which to retrieve the descriptor
      * @return The property descriptor
-     *
      * @throws IllegalArgumentException if this is not a valid property
-     *  name for our DynaClass
+     *                                  name for our DynaClass
      */
     protected DynaProperty getDynaProperty(final String name) {
 
         final DynaProperty descriptor = getDynaClass().getDynaProperty(name);
         if (descriptor == null) {
             throw new IllegalArgumentException
-                    ("Invalid property name '" + name + "'");
+                ("Invalid property name '" + name + "'");
         }
         return (descriptor);
 
@@ -398,15 +374,14 @@ public class BasicDynaBean implements DynaBean, Serializable {
 
     /**
      * Is an object of the source class assignable to the destination class?
-     *
-     * @param dest Destination class
+     * @param dest   Destination class
      * @param source Source class
      * @return <code>true</code> if the source class is assignable to the
      * destination class, otherwise <code>false</code>
      */
     protected boolean isAssignable(final Class<?> dest, final Class<?> source) {
 
-        if (dest.isAssignableFrom(source) ||
+        return dest.isAssignableFrom(source) ||
                 ((dest == Boolean.TYPE) && (source == Boolean.class)) ||
                 ((dest == Byte.TYPE) && (source == Byte.class)) ||
                 ((dest == Character.TYPE) && (source == Character.class)) ||
@@ -414,11 +389,7 @@ public class BasicDynaBean implements DynaBean, Serializable {
                 ((dest == Float.TYPE) && (source == Float.class)) ||
                 ((dest == Integer.TYPE) && (source == Integer.class)) ||
                 ((dest == Long.TYPE) && (source == Long.class)) ||
-                ((dest == Short.TYPE) && (source == Short.class))) {
-            return (true);
-        } else {
-            return (false);
-        }
+                ((dest == Short.TYPE) && (source == Short.class));
 
     }
 
